# voxel_engine

./: Cargo.toml  README.md
assets/shaders/: frag.wgsl  vert.wgsl
src/: lib.rs  main.rs
src/client/: common.rs  err.rs  mod.rs
src/client/net/: common.rs  err.rs  error.rs  message.rs  mod.rs  msg_handling.rs
src/client/player/: camera.rs  controller.rs  mod.rs
src/client/renderer/: depth_texture.rs  err.rs  init.rs  mod.rs
src/client/renderer/common/: bind_group.rs  buffer.rs  mod.rs  pipeline.rs  shader.rs  texture.rs  uniform.rs
src/client/time/: mod.rs
src/client/window/: mod.rs
src/client/world/: mod.rs
src/client/world/block/: atlas.rs  mod.rs  vertex.rs
src/client/world/chunk/: mod.rs
src/common/: files.rs  logger.rs  mod.rs
src/common/math/: angle.rs  deg.rs  mat.rs  mod.rs  point.rs  rad.rs
src/common/math/vec/: mod.rs  vec3.rs  vec4.rs
src/common/networking/: mod.rs
src/common/time/: fstats.rs  mod.rs  tick.rs  timing.rs
src/common/world/: mod.rs  pos.rs
src/common/world/block/: face.rs  mod.rs
src/common/world/chunk/: ind.rs  mod.rs  vec.rs
src/server/: common.rs  err.rs  mod.rs  msg_handling.rs
src/server/client/: list.rs  mod.rs
src/server/net/: common.rs  message.rs  mod.rs
src/server/world/: mod.rs
src/server/world/chunk/: mod.rs
